<resources>
    <string name="app_name">Besfut</string>

    <string name="cancel">ОТМЕНА</string>
    <string name="create">СОЗДАТЬ</string>

    <string name="store">STORE</string>
    <string name="storage">STORAGE</string>
    <string name="reward">REWARD</string>
    <string name="statistic">STATISTIC</string>
    <string name="settings">SETTINGS</string>
    <string name="splash">JUST LEVEL UP</string>

    <string name="sport_health">опыт</string>
    <string name="learning">монеты</string>

    <string name="earned">заработано</string>
    <string name="spent">потрачено</string>
    <string name="all">всего</string>
    <string name="average">среднее</string>

    <string name="series">серии</string>
    <string name="exp">ОПЫТ</string>
    <string name="coin">МОНЕТЫ</string>
    <string name="score_ratio">СООТНОШЕНИЕ МОНЕТ</string>
    <string name="time_phone">время в телефоне</string>
    <string name="time_learning">время на учебу</string>
    <string name="active_day">активный день</string>
    <string name="pass">пропуск</string>
    <string name="top_reward">топ наград</string>

    <string name="name">название</string>
    <string name="price">цена</string>
    <string name="quantity">количество</string>
    <string name="write_series">вести серию</string>
    <string name="category">категория</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>