<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_item"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:paddingEnd="10dp"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alumni_sans"
        android:textColor="@color/light"
        android:textSize="25sp"
        tools:text="Добавление награды" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextDesign"
            android:layout_width="250dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_name"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextDesign"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_price"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextDesign"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_quantity"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextDesignMenu"
            android:layout_width="250dp"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/edit_category"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/check_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/write_series"
            android:textColor="@color/light"
            android:fontFamily="@font/alumni_sans"
            android:textSize="18sp"
            android:checked="true"
            style="@style/ThemeOverlay.App.CheckBox"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/light" />

        <Button
            android:id="@+id/btn_create"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/create"
            android:textColor="@color/light" />
    </LinearLayout>

</LinearLayout>