<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_back"
    tools:context=".screens.SettingsActivity">

    <LinearLayout
        android:id="@+id/title_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/title_back"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/shape_item"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/title_settings">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:text="@string/store"
            android:textColor="@color/light"
            android:padding="8dp"
            android:layout_marginStart="8dp"/>
        <ImageButton
            android:id="@+id/info_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_info"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:contentDescription="info"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/shape_item"
        android:layout_marginTop="85dp"
        app:layout_constraintTop_toBottomOf="@id/title_settings">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            tools:text="@string/reward"
            android:textColor="@color/light"
            android:padding="8dp"
            android:layout_marginStart="8dp"/>
        <ImageButton
            android:id="@+id/info_reward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_info"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:contentDescription="info"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>