<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_back"
    tools:context=".screens.main_fragment.StatisticFragment">

    <LinearLayout
        android:id="@+id/title_statistic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/title_back"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistic"/>
    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/vc_settings"
        android:contentDescription="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <LinearLayout
        android:id="@+id/progress_layout_statistic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_statistic">

        <ProgressBar
            android:id="@+id/progress_exp_statistic"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:progress="80"
            android:progressDrawable="@drawable/progress_exp" />

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/progress_exp_value_statistic"
                style="@style/LvlText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2.2k/14k" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="EXP"
                android:textSize="15sp"
                android:textColor="@color/light"
                android:fontFamily="@font/alumni_sans"/>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_layout_statistic">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/first_panel"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginHorizontal="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/shape_item">

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_item">

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/series_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp">
                    <ImageView
                        android:id="@+id/point"
                        android:layout_width="8dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center"
                        android:background="@drawable/point"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/alumni_sans"
                        android:textColor="@color/gray"
                        android:text="@string/series"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_series"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:listitem="@layout/model_series_item"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/point" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/second_panel"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/shape_item">

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_item">

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/third_panel"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shape_item">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/top_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:paddingStart="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/point_1"
                        android:layout_width="8dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center"
                        android:background="@drawable/point"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/alumni_sans"
                        android:textColor="@color/gray"
                        android:text="@string/top_reward"/>
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/shape_item"
                        android:gravity="center|top"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/alumni_sans_semibold"
                            android:text="#2"
                            android:textColor="@color/orange"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/alumni_sans_semibold"
                            android:text="Спорт"
                            android:textColor="@color/light"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/alumni_sans"
                            android:text="740 EXP"
                            android:textColor="@color/light"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/shape_item"

                        android:gravity="center|top"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
                        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/alumni_sans_semibold"
                            android:text="#2"
                            android:textColor="@color/orange"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/alumni_sans_semibold"
                            android:text="Спорт"
                            android:textColor="@color/light"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/alumni_sans"
                            android:text="740 EXP"
                            android:textColor="@color/light"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/shape_item"
                        android:gravity="center|top"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/alumni_sans_semibold"
                            android:text="#2"
                            android:textColor="@color/orange"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/alumni_sans_semibold"
                            android:text="Спорт"
                            android:textColor="@color/light"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/alumni_sans"
                            android:text="740 EXP"
                            android:textColor="@color/light"
                            android:textSize="16sp" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>